Bug 1651463 - Add CSD offset in MoveResize as needed. r=stransky

gtk_window_move undoes that...

Differential Revision: https://phabricator.services.mozilla.com/D178385